crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@314.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '[4,50)'::mydomainrange @> 7::mydomain;"
---
SelectStmt@0..46
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..45
    AExpr@7..45
      TypeCast@7..30
        AConst@7..15
          Sconst@7..15 "'[4,50)'"
        Typecast@15..17 "::"
        TypeName@17..30
          Ident@17..30 "mydomainrange"
      Whitespace@30..31 " "
      Op@31..33 "@>"
      Whitespace@33..34 " "
      TypeCast@34..45
        AConst@34..35
          Iconst@34..35 "7"
        Typecast@35..37 "::"
        TypeName@37..45
          Ident@37..45 "mydomain"
  Ascii59@45..46 ";"

