crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@318.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '[4,5)'::restrictedrange @> 7;"
---
SelectStmt@0..37
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..36
    AExpr@7..36
      TypeCast@7..31
        AConst@7..14
          Sconst@7..14 "'[4,5)'"
        Typecast@14..16 "::"
        TypeName@16..31
          Ident@16..31 "restrictedrange"
      Whitespace@31..32 " "
      Op@32..34 "@>"
      Whitespace@34..35 " "
      AConst@35..36
        Iconst@35..36 "7"
  Ascii59@36..37 ";"

