crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create index numrange_test_btree on numrange_test(nr);
---
IndexStmt@0..54
  Create@0..6 "create"
  Whitespace@6..7 " "
  Index@7..12 "index"
  Whitespace@12..13 " "
  Ident@13..32 "numrange_test_btree"
  Whitespace@32..33 " "
  On@33..35 "on"
  Whitespace@35..36 " "
  RangeVar@36..49
    Ident@36..49 "numrange_test"
  Ascii40@49..50 "("
  IndexElem@50..52
    Ident@50..52 "nr"
  Ascii41@52..53 ")"
  Ascii59@53..54 ";"

