crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@323.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select textrange1('a','Z') @> 'b'::text;"
---
SelectStmt@0..40
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..39
    AExpr@7..39
      FuncCall@7..25
        Ident@7..17 "textrange1"
        Ascii40@17..18 "("
        AConst@18..21
          Sconst@18..21 "'a'"
        Ascii44@21..22 ","
        AConst@22..25
          Sconst@22..25 "'Z'"
      Ascii41@25..26 ")"
      Whitespace@26..27 " "
      Op@27..29 "@>"
      Whitespace@29..30 " "
      TypeCast@30..39
        AConst@30..33
          Sconst@30..33 "'b'"
        Typecast@33..35 "::"
        TypeName@35..39
          TextP@35..39 "text"
  Ascii59@39..40 ";"

